updated registration link

--- a/index.html
+++ b/index.html
@@ -90,19 +90,12 @@
 
 
 
-
-
 <div class="container centered">
     <ul class="main-navigation">
         <li><a href="#faqs" class="smoothScroll">faq</a></li>
             <li><a href="#agenda" class="smoothScroll">agenda</a></li>
     </ul>
     </div>
-
-
-
-
-
 
 
 
@@ -124,17 +117,6 @@
 
 
 
-
-
-
-
-
-<!--
-
-<div class="col-lg-12">
-
-
-  -->
 
 
 <div id="summary">
@@ -166,7 +148,7 @@
 </div>
 
 
-    <a href="http://hack.osu.edu/make/">
+    <a href="https://docs.google.com/forms/d/1M7Pi-cYAi5_oK6y6lR7dMqa_52co17PgJ9D2f0ptew4/viewform">
 
         <button type="button" class="btn btn-lg btn-default">Register</button>
 
