--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <h3>April 18th & 19th</h3>
 
-    <h4><a href="https://www.osu.edu/map/building.php?building=0279">Dreese Labs 260</a></h4>
+    <h4><a href="https://www.osu.edu/map/google.php?buildingIn=279">Dreese Labs 260</a></h4>
 </div>
 
    <div class="sub-heading">
