Update phrasing of definition

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
    <div class="sub-heading">
     <p>
-        The 2015 Makeathon is a 24 hour hardware event presented by the Electronics Club at OSU and OHI/O. The event will be free to attend for Ohio State students, which includes food and drinks to keep you going! Don’t have any hardware experience or cool components to work with? Not a problem—we will have microcontrollers, sensors and all of your other circuit essentials readily available. There are $500 in prizes in addition to sponsor specific prizes from Texas Instruments, AwareAbility, and Microsoft.*
+        The 2015 Makeathon is a 24 hour hardware oriented hackathon presented by the Electronics Club at OSU and OHI/O. The event will be free to attend for Ohio State students, which includes food and drinks to keep you going! Don’t have any hardware experience or cool components to work with? Not a problem—we will have microcontrollers, sensors and all of your other circuit essentials readily available. There are $500 in prizes in addition to sponsor specific prizes from Texas Instruments, AwareAbility, and Microsoft.*
     </p>
 
     <p>
