--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
 
         <div class="navbar-collapse collapse">
 
-<!--
-                <a href="https://upverter.com/ElectronicsClubOSU/" target="_blank" > <img src="assets/img/upverter_logo.png" alt="Upverter Logo" class="octocat" id="github">  </a>
--->
         <!-- NAVIGATION LINKS -->
         <div class="navigation-container">
         <ul class="nav navbar-nav">
@@ -92,8 +89,10 @@
 
 <div class="container centered">
     <ul class="main-navigation">
-        <li><a href="#faqs" class="smoothScroll">faq</a></li>
-            <li><a href="#agenda" class="smoothScroll">agenda</a></li>
+
+        <li id="faq-nav"><a href="#faqs" class="smoothScroll">faq</a></li>
+
+        <li id="agenda-nav"><a href="#agenda" class="smoothScroll">agenda</a></li>
     </ul>
     </div>
 
