--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 <div class="container centered">
     <ul class="main-navigation">
 
-        <li id="faq-nav"><a href="#faqs" class="smoothScroll">faq</a></li>
+        <li id="faq-nav"><a href="#faqs">faq</a></li>
 
-        <li id="agenda-nav"><a href="#agenda" class="smoothScroll">agenda</a></li>
+        <li id="agenda-nav"><a href="#agenda">agenda</a></li>
     </ul>
     </div>
 
