--- a/index.html
+++ b/index.html
@@ -503,6 +503,30 @@ If you already have a microcontroller or microcomputer in mind but need cool per
     </div>
 
 
+    <div id="sponsors"
+    <div class="container centered">
+
+    <div class="col-sm-12 col-md-12 col-lg-12">
+
+        <div class="col-sm-6 col-md-6 col-lg-6">
+        <ul>
+            <li><img src="assets/img/sponsors/awareability.png"></li>
+            <li><img src="assets/img/sponsors/texas-instrument.png"></li>
+        </ul>
+        </div>
+
+
+        <div class="col-sm-6 col-md-6 col-lg-6">
+        <ul>
+            <li><img src="assets/img/sponsors/microsoft.png"></li>
+            <li><img src="assets/img/sponsors/cocacola.png"></li>
+        </ul>
+        </div>
+
+    </div>
+</div>
+    </div>
+
 </div>
 </div>
 
