:satisfied: really fixed sponsor images this time

--- a/index.html
+++ b/index.html
@@ -414,15 +414,27 @@ If you already have a microcontroller or microcomputer in mind but need cool per
 
 
 
-<div class="container centered">
+<div class="container">
     <h1>agenda</h1>
 </div>
 
-    <div class="container centered">
-   <div class="col-sm-12 col-md-12 col-lg-12">
 
 
-  <div id="schedule">
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="col-sm-12 col-md-12 col-lg-12">
+
+<div id="schedule">
 
  <table class="table-condensed table-bordered ">
         <thead>
@@ -488,23 +500,26 @@ If you already have a microcontroller or microcomputer in mind but need cool per
             </tr>
         </tbody>
     </table>
-
-        </div>
-
-
-
-
-
-
-
-
-        </div>
+    </div>
 
     </div>
 
 
-    <div id="sponsors"
-    <div class="container centered">
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div id="sponsors">
+    <div class="container">
 
     <div class="col-sm-12 col-md-12 col-lg-12">
 
@@ -522,7 +537,7 @@ If you already have a microcontroller or microcomputer in mind but need cool per
             <li><img src="assets/img/sponsors/cocacola.png"></li>
         </ul>
         </div>
-
+    </div>
     </div>
 </div>
     </div>
