removed shitty code that wasn't mine

--- a/index.html
+++ b/index.html
@@ -330,17 +330,7 @@ Bring your laptops, any specific hardware components you were planning on using 
     <p>
 Judges will be from a variety of experience will be evaluating projects. Projects will be judged using a rubric which includes creativity, technical difficulty, presentation as well as other categories. There will be larger prizes for the overall Winner as well as Runner Up but that certainly isn’t all! There will be prizes for Honorable Mentions in categories like “Best Lighting Project” or “Best Electromotive Project”. Even if your project goes up in a puff of magic smoke, you might end up winning the mention for “Best Nosedive”.
     </p>
-    <p>
-       <!-- Filler for formatting -->
-       </br>
-       </br>
-       </br>
-       </br>
-       </br>
-       </br>
-       </br>
-       </br>
-    </p>
+
 
 </div>
 
@@ -414,7 +404,7 @@ If you already have a microcontroller or microcomputer in mind but need cool per
 
 
 
-<div class="container">
+<div class="container centered">
     <h1>agenda</h1>
 </div>
 
