--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="navbar-header navbar-static-top">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
+	            <span class="yicon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
         </div>
@@ -190,8 +190,8 @@
     <span>What is a Makeathon?</span>
 
     <!-- CONTENT -->
-    <p>
-		A Makeathon is a Hardware focused Hackathon. Both are events where participants build awesome projects from scratch in just a few short hours. Both can be 24 or 36 hour events--we will be holding a 24 hour event. The difference between a MAKEathon and a HACKathon is that we are encouraging projects to be Hardware oriented, and therefore physically <i>making</i> something!
+    <p class="centered">
+		A Makeathon is a Hardware focused Hackathon. Both are events where participants build awesome projects from scratch in just a few short hours. Both can be 24 or 36 hour events--we will be holding a 24 hour event. The difference between a Makeathon and a Hackathon is that we are encouraging projects to be Hardware oriented, and therefore physically <i>making</i> something!
 
     </p>
 
@@ -294,7 +294,7 @@ Bring your laptops, any specific hardware components you were planning on using 
         If you would like to work in a group but have a cool idea, this is the time to pitch the idea to everyone and see if anyone would like to work with you. On the flip side, if you want to work in a group but don’t have an idea yet, listen to those pitching ideas and join up with some like-minded people!
     </p>
     <p>
-        You are by no means to obligated to work in a group. If you want to fly solo, go for it!
+        You are by no means obligated to work in a group. If you want to fly solo, go for it!
     </p>
 
 </div>
