--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@ If you already have a microcontroller or microcomputer in mind but need cool per
 
 
 
-
+<div id="schedule">
 
 <div class="col-sm-12 col-md-12 col-lg-12">
 
-<div id="schedule">
+
 
  <table class="table-condensed table-bordered ">
         <thead>
@@ -417,14 +417,14 @@ If you already have a microcontroller or microcomputer in mind but need cool per
                 <th>Event</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="centered">
             <tr>
                 <td>11am</td>
                 <td>Check-in</td>
             </tr>
             <tr>
                 <td>12pm</td>
-                <td>Kickoff</td>
+                <td>Kickoff & Lunch</td>
             </tr>
             <tr>
                 <td>1pm</td>
