added additional sponorship

--- a/index.html
+++ b/index.html
@@ -373,24 +373,24 @@ If you already have a microcontroller or microcomputer in mind but need cool per
 
 <!-- ////////// -->
 
-
-
-
-<div class="container">
-        <hr/>
-    </div>
-
     </div>
 
 
-<div id="agenda">
 
 
+    </div>
+
+
+
+
+
+
+
+<section id="agenda">
 
 
 <div class="container centered">
     <h1>agenda</h1>
-</div>
 
 
 
@@ -404,7 +404,7 @@ If you already have a microcontroller or microcomputer in mind but need cool per
 
 
 
-<div id="schedule">
+
 
 <div class="col-sm-12 col-md-12 col-lg-12">
 
@@ -475,11 +475,11 @@ If you already have a microcontroller or microcomputer in mind but need cool per
         </tbody>
     </table>
     </div>
-
     </div>
 
 
 
+</section>
 
 
 
@@ -492,11 +492,24 @@ If you already have a microcontroller or microcomputer in mind but need cool per
 
 
 
-    <div id="sponsors">
+    <section id="sponsors">
     <div class="container">
 
-    <div class="col-sm-12 col-md-12 col-lg-12">
+<div class="col-sm-12 col-md-12 col-lg-12">
 
+
+<div class="primary-sponsors">
+<!-- PRIMARY SPONSOR -->
+        <div class="col-sm-12 col-md-12 col-lg-12">
+        <ul>
+            <li><img src="assets/img/sponsors/ohio.png"></li>
+        </ul>
+        </div>
+</div>
+
+
+<div class="secondary-sponsors">
+<!-- SECONDARY SPONSORS -->
         <div class="col-sm-6 col-md-6 col-lg-6">
         <ul>
             <li><img src="assets/img/sponsors/awareability.png"></li>
@@ -511,12 +524,20 @@ If you already have a microcontroller or microcomputer in mind but need cool per
             <li><img src="assets/img/sponsors/cocacola.png"></li>
         </ul>
         </div>
-    </div>
-    </div>
 </div>
-    </div>
 
 </div>
+
+
+
+
+
+
+    </div>
+
+</section>
+
+
 </div>
 
 
