--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
 
     </div>
+    <div class="triangle"></div>
 
 <!-- CONTENT BEGINS -->
 
@@ -93,7 +94,7 @@
 
         <li id="agenda-nav"><a href="#agenda">agenda</a></li>
     </ul>
-    </div>
+</div>
 
 
 
