--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <!-- CONTENT -->
     <p>
-Yes! Absolutely still come. We will have mentors and experienced club members helping out so you are welcome to flag us down at any point. If you want to learn a bit more about hardware before the event, come to either Open Lab hours or a club meeting for the Electronics Club. Check our <a href=”https://electronicsosu.com/calendar.html”>calendar for events and lab hours</a>.
+Yes! Absolutely still come. We will have mentors and experienced club members helping out so you are welcome to flag us down at any point. If you want to learn a bit more about hardware before the event, come to either Open Lab hours or a club meeting for the Electronics Club. Check our <a href="http://electronicsosu.com/calendar.html">calendar</a> for events and lab hours.
     </p>
 
 </div>
@@ -237,7 +237,7 @@ Yes! Absolutely still come. We will have mentors and experienced club members he
 
     <!-- CONTENT -->
     <p>
-The IEEE Undergrad picnic is also on Saturday, April 18th. If you really want to attend the picnic, that’s fine. You will need to go to Check-in (starting at 11am) and let us know that you are going to the picnic. You are then free to go and come back to the MAKEathon. Just note that you will have missed the Kickoff and some build time. The logistic information covered at the Kickoff will also be in your packet that you get at Check-in.
+The IEEE Undergrad picnic is also on Saturday, April 18th. If you really want to attend the picnic, that’s fine. You will need to go to Check-in (starting at 11am) and let us know that you are going to the picnic. You are then free to go and come back to the Makeathon. Just note that you will have missed the Kickoff and some build time. The logistic information covered at the Kickoff will also be in your packet that you get at Check-in.
     </p>
 
 </div>
@@ -503,7 +503,7 @@ If you already have a microcontroller or microcomputer in mind but need cool per
 <!-- PRIMARY SPONSOR -->
         <div class="col-sm-12 col-md-12 col-lg-12">
         <ul>
-            <li><img src="assets/img/sponsors/ohio.png"></li>
+            <li><a href="http://hack.osu.edu"><img src="assets/img/sponsors/ohio.png"></a></li>
         </ul>
         </div>
 </div>
