fixed back to top button that Joe broke

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ If you already have a microcontroller or microcomputer in mind but need cool per
 
 
 <!-- ===== BACK TO TOP BUTTON ===== -->
-        <a href="#" class="go-top hidden">&#9650;</a>
+        <a href="#" class="go-top">&#9650;</a>
 <!-- ===== BACK TO TOP BUTTON ENDS===== -->
 
 
