--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <a href="https://docs.google.com/forms/d/1M7Pi-cYAi5_oK6y6lR7dMqa_52co17PgJ9D2f0ptew4/viewform">
 
-        <button type="button" class="btn btn-lg btn-default">register</button>
+        <button type="button" class="btn btn-lg btn-default">Register</button>
 
     </a>
 
@@ -146,7 +146,7 @@
 
     <a href="https://docs.google.com/forms/d/1fE-9Mk93ZZXDUYriCw3q6j7YV-Qtek08933zTC2nMUc/viewform">
 
-        <button type="button" class="btn btn-lg btn-secondary">volunteer</button>
+        <button type="button" class="btn btn-lg btn-secondary">Volunteer</button>
 
     </a>
 
