--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 
 
-<div class="col-sm-12 col-md-12 col-lg-12 centered">
+<div class="col-sm-12 col-md-12 col-lg-12">
 
     <!-- TITLE -->
     <span>What is a Makeathon?</span>
