--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </div>
 
 
-    <a href="https://docs.google.com/forms/d/1M7Pi-cYAi5_oK6y6lR7dMqa_52co17PgJ9D2f0ptew4/viewform">
+    <a href="https://docs.google.com/forms/d/1M7Pi-cYAi5_oK6y6lR7dMqa_52co17PgJ9D2f0ptew4/viewform" target="_blank">
 
         <button type="button" class="btn btn-lg btn-default">Register</button>
 
@@ -144,7 +144,7 @@
 &#0020;
 
 
-    <a href="https://docs.google.com/forms/d/1fE-9Mk93ZZXDUYriCw3q6j7YV-Qtek08933zTC2nMUc/viewform">
+    <a href="https://docs.google.com/forms/d/1fE-9Mk93ZZXDUYriCw3q6j7YV-Qtek08933zTC2nMUc/viewform" target="_blank">
 
         <button type="button" class="btn btn-lg btn-secondary">Volunteer</button>
 
