--- a/index.html
+++ b/index.html
@@ -444,10 +444,14 @@ If you already have a microcontroller or microcomputer in mind but need cool per
             </tr>
             <tr>
                 <td>1:30pm</td>
-                <td>LaunchPad Workshop</td>
+                <td>LaunchPad Workshop led by Awareability</td>
             </tr>
             <tr>
-                <td>5pm</td>
+                <td>3:30pm</td>pm</td>
+                <td>Spark Core Workshop led by Microsoft</td>
+            </tr>
+            <tr>
+                <td>5:30pm</td>
                 <td>Dinner</td>
             </tr><tr>
                 <td>9pm</td>
@@ -478,11 +482,15 @@ If you already have a microcontroller or microcomputer in mind but need cool per
             </tr>
             <tr>
                 <td>1:15pm</td>
-                <td>Judging and Awards</td>
+                <td>Judging</td>
             </tr>
             <tr>
-                <td>4pm</td>
-                <td>Sleep</td>
+                <td>3:45pm</td>
+                <td>Judging Ends</td>
+            </tr>
+            <tr>
+                <td>4:00pm</td>
+                <td>Awards</td>
             </tr>
         </tbody>
     </table>
