--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ If you already have a microcontroller or microcomputer in mind but need cool per
             </tr>
             <tr>
                 <td>3:45pm</td>
-                <td>Judging Ends</td>
+                <td>Judging ends</td>
             </tr>
             <tr>
                 <td>4:00pm</td>
