--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ If you already have a microcontroller or microcomputer in mind but need cool per
             </tr>
             <tr>
                 <td>1:30pm</td>
-                <td>LaunchPad Workshop led by Awareability</td>
+                <td>LaunchPad Workshop led by AwareAbility</td>
             </tr>
             <tr>
                 <td>3:30pm</td>
