--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Makeathon</title>
+        <title>OHI/O Makeathon</title>
         <meta name="The Electronics Club at OSU">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
