--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </p>
 
     <p>
-        *Attendance will be capped at 80 students or 20 teams of up to 4 people.
+        *Registration for the event is now closed.
     </p>
 </div>
 
