--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ If you already have a microcontroller or microcomputer in mind but need cool per
             </tr>
             <tr>
                 <td>1pm</td>
-                <td>Making begins</td>
+                <td>Making Begins</td>
             </tr>
             <tr>
                 <td>1:30pm</td>
@@ -476,15 +476,15 @@ If you already have a microcontroller or microcomputer in mind but need cool per
             </tr>
             <tr>
                 <td>1pm</td>
-                <td>Making ends</td>
+                <td>Making Ends</td>
             </tr>
             <tr>
                 <td>1:15pm</td>
-                <td>Judging</td>
+                <td>Judging Begins</td>
             </tr>
             <tr>
                 <td>3:45pm</td>
-                <td>Judging ends</td>
+                <td>Judging Ends</td>
             </tr>
             <tr>
                 <td>4:00pm</td>
