Team reigstration link

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 &#0020;
 
 -->
-    <a href=https://docs.google.com/forms/d/19g3rpOUmtE6knBpLpY-owprHDPhVe-BpjEekp7KSinM/viewform"" target="_blank">
+    <a href="https://docs.google.com/forms/d/19g3rpOUmtE6knBpLpY-owprHDPhVe-BpjEekp7KSinM/viewform" target="_blank">
 
         <button type="button" class="btn btn-lg btn-secondary">Register your team</button>
 
